--- a/gb/6/3/19/n1258417.md
+++ b/gb/6/3/19/n1258417.md
@@ -1,59 +1,56 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/upuqsh2796/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/upuqsh2796/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qblrme335/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/qblrme335/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qblrme335/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qblrme335/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qblrme335/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qblrme335/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qblrme335/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【风云人物】中唐名将郭子仪(二)</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元3月18日讯】</p>
-<p><b> 谈笑用兵 吓退敌军</b></p>
-<p>两京收复后，由于郭子仪的功劳太大，受到佞臣的妒忌，向肃宗进谗言解除了他的兵权。唐代宗继位后，唐军忙于对北方用兵，京城的兵力空虚。此时吐蕃却突然从河西走廊向长安节节逼近，告急文书像雪片一样飞入朝廷，直到吐蕃攻下武功，眼看就要兵临长安，唐代宗方才匆匆命令让郭子仪迎敌。当时郭子仪正赋闲在家，手上没有一兵一卒，受命后只带着二十几名随从就赶赴前线了。他一路招兵买马，到长安时已有万余人了。可是此时长安城已破，唐代宗逃到陕州避难。面对吐蕃二十余万兵马，要收复长安，简直难如登天。</p>
-<p>郭子仪料定吐蕃人一向多疑，占领长安未遇唐军主力，必心存疑感，恐是汉人的诱敌之计。于是他令一支部队到城外的山上，燃起上万个火堆，擂鼓呐喊，同时派一队骑兵在城下巡逻，装作大军压境的样子。并且派人潜入长安城内笼络数百名少年，夜里四处击鼓呐喊：“郭将军回来啦！郭将军回来啦！唐朝大军要攻进来了。”吐蕃军队在慌乱之下，吓得迅速退出了长安。</p>
-<p>郭子仪以万余散兵，吓退吐蕃二十万大军，使唐代宗十分感动。回到长安后，赐给郭子仪铁券(即免死券)，并且把他的画像高悬于宫里的凌烟阁上。</p>
-<p><b> 单骑赴会 回纥反正</b></p>
-<p>郭子仪年近古稀之时，唐朝再一次面临生存的危机。叛将仆固怀恩勾结吐蕃、回纥等三十万大军分几路进犯中原，并且连陷缸泉、邪用、凤翔，直逼长安而来。郭子仪再一次临危受命，赶赴前线。此时仆固怀恩因病身亡，而回纥与吐蕃之间又出现矛盾。郭子仪认为机不可失，于是派人去见回纥主将药葛罗，转达郭子仪的问候之意。药葛罗当年收复两京时，曾见过郭子仪，对于他宽厚的为人及用兵如神相当佩服，但他不相信郭子仪那么长寿还活着，就让使者转告：“请郭老将军亲自来谈。”</p>
-<p>郭子仪闻讯后，就要单骑前往回纥大营，众将百般劝阻，他的儿子郭烯更是阻拦不让他前去冒险，郭子仪说: “如今强敌当前，要是交战的话，不但我们父子的性命难保，就是唐室江山也是危在旦夕。现在唯一的办法，就是以诚意劝服回纥，如果成功是天下人的福分，如果失败我个人性命又算得了什么呢？”说完后，就带了几名随从冲出军营了。</p>
-<p>郭子仪到了回纥营前，回纥兵如临大敌，弯弓搭箭，准备迎战。只见郭子仪不慌不忙，卸掉盔甲、放下长枪，缓步走向营门。药葛罗及回纥众将见真的是郭子仪来了，赶紧列队施礼，郭子仪上前拉起药葛罗的手，叙了旧情后晓以大义说：“以前回纥曾对唐朝有功，现在却来攻打唐朝，如此岂不前功尽弃？仆固怀恩这种人背君弃母，为天下人所不耻，你们跟着他弃前功而结新怨，多么不值得啊！”</p>
-<p>药葛罗听了以后，表示自己也不愿与郭老将军作战。郭子仪进一步说吐蕃如何无道：趁唐朝内乱，侵占土地、掠夺财物。并且表示如果回纥愿意助唐军击退吐蕃，唐朝愿意将吐蕃掠去的财物全部送给回纥。于是在唐军与回纥联手追击下，吐蕃溃不成军，迅速逃去。</p>
-<p>郭子仪单骑赴会，解除了唐朝覆亡的危机，成为代代相传的佳话。(待续)＠*</p>
-<p><span style="color: #ffffff;">(http://www.dajiyuan.com)</span></p>
-
+<p>【大纪元3月18日讯】</p> <p><b> 谈笑用兵 吓退敌军</b></p> <p>两京收复后，由于郭子仪的功劳太大，受到佞臣的妒忌，向肃宗进谗言解除了他的兵权。唐代宗继位后，唐军忙于对北方用兵，京城的兵力空虚。此时吐蕃却突然从河西走廊向长安节节逼近，告急文书像雪片一样飞入朝廷，直到吐蕃攻下武功，眼看就要兵临长安，唐代宗方才匆匆命令让郭子仪迎敌。当时郭子仪正赋闲在家，手上没有一兵一卒，受命后只带着二十几名随从就赶赴前线了。他一路招兵买马，到长安时已有万余人了。可是此时长安城已破，唐代宗逃到陕州避难。面对吐蕃二十余万兵马，要收复长安，简直难如登天。</p> <p>郭子仪料定吐蕃人一向多疑，占领长安未遇唐军主力，必心存疑感，恐是汉人的诱敌之计。于是他令一支部队到城外的山上，燃起上万个火堆，擂鼓呐喊，同时派一队骑兵在城下巡逻，装作大军压境的样子。并且派人潜入长安城内笼络数百名少年，夜里四处击鼓呐喊：“郭将军回来啦！郭将军回来啦！唐朝大军要攻进来了。”吐蕃军队在慌乱之下，吓得迅速退出了长安。</p> <p>郭子仪以万余散兵，吓退吐蕃二十万大军，使唐代宗十分感动。回到长安后，赐给郭子仪铁券(即免死券)，并且把他的画像高悬于宫里的凌烟阁上。</p> <p><b> 单骑赴会 回纥反正</b></p> <p>郭子仪年近古稀之时，唐朝再一次面临生存的危机。叛将仆固怀恩勾结吐蕃、回纥等三十万大军分几路进犯中原，并且连陷缸泉、邪用、凤翔，直逼长安而来。郭子仪再一次临危受命，赶赴前线。此时仆固怀恩因病身亡，而回纥与吐蕃之间又出现矛盾。郭子仪认为机不可失，于是派人去见回纥主将药葛罗，转达郭子仪的问候之意。药葛罗当年收复两京时，曾见过郭子仪，对于他宽厚的为人及用兵如神相当佩服，但他不相信郭子仪那么长寿还活着，就让使者转告：“请郭老将军亲自来谈。”</p> <p>郭子仪闻讯后，就要单骑前往回纥大营，众将百般劝阻，他的儿子郭烯更是阻拦不让他前去冒险，郭子仪说: “如今强敌当前，要是交战的话，不但我们父子的性命难保，就是唐室江山也是危在旦夕。现在唯一的办法，就是以诚意劝服回纥，如果成功是天下人的福分，如果失败我个人性命又算得了什么呢？”说完后，就带了几名随从冲出军营了。</p> <p>郭子仪到了回纥营前，回纥兵如临大敌，弯弓搭箭，准备迎战。只见郭子仪不慌不忙，卸掉盔甲、放下长枪，缓步走向营门。药葛罗及回纥众将见真的是郭子仪来了，赶紧列队施礼，郭子仪上前拉起药葛罗的手，叙了旧情后晓以大义说：“以前回纥曾对唐朝有功，现在却来攻打唐朝，如此岂不前功尽弃？仆固怀恩这种人背君弃母，为天下人所不耻，你们跟着他弃前功而结新怨，多么不值得啊！”</p> <p>药葛罗听了以后，表示自己也不愿与郭老将军作战。郭子仪进一步说吐蕃如何无道：趁唐朝内乱，侵占土地、掠夺财物。并且表示如果回纥愿意助唐军击退吐蕃，唐朝愿意将吐蕃掠去的财物全部送给回纥。于是在唐军与回纥联手追击下，吐蕃溃不成军，迅速逃去。</p> <p>郭子仪单骑赴会，解除了唐朝覆亡的危机，成为代代相传的佳话。(待续)＠*</p> <p><span style="color: #ffffff;">(http://www.dajiyuan.com)</span></p> 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/6/3/19/n1258417.htm">【风云人物】中唐名将郭子仪(二)</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798917.htm">武汉肺炎无法排除人传人 美国务院警告防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798666.htm">武汉新冠状病毒再增死亡病例 网民冒险爆料</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11798091.htm">日本现首例武汉肺炎 机场加强防疫</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/16/n11796789.htm">港卫生防护中心：武汉肺炎一患者 未涉足街市 疑人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11795520.htm">新型冠状病毒 近距离接触恐人传人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/15/n11793955.htm">武汉肺炎疑现人传人 夫妻先后发病</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11885487.htm">美国作家12年前“预言”武汉肺炎爆发</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/15/n11871826.htm">【罗厨寻味】红烧牛尾</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11886677.htm">【唐靖远快评】北京2月底须控制疫情的秘密</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881049.htm">【新闻看点】疫情严峻3方甩锅 川普为习说好话</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】肺炎扩散30国和地区 武汉死亡率高</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879658.htm">【独家】外逃求生？武汉一天出走2.8万人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883520.htm">断网前奏？中共工信部批准设立根服务器</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878461.htm">台歌手大支写歌呛WHO 嘲讽中共数据造假</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883801.htm">古天乐全球搜130万口罩 四类人获优先赠予</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878231.htm">新冠病毒假阴性或有4大原因 会带来何风险？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879107.htm">钻石公主号隔离仍爆高感染率 医师揭4大原因</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11885487.htm">美国作家12年前“预言”武汉肺炎爆发</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883959.htm">刘真惊传叶克膜抢救 主动脉瓣狭窄有多危险？</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/5/12/26/n1166001.md#1">【风云人物】替自己准备棺材 不畏生死的海瑞</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/5/12/28/n1170051.md#1">【风云人物】为民喉舌的东坡</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/5/12/31/n1173259.md#1">【风云人物】鞠躬尽瘁的诸葛亮</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/6/1/22/n1187531.md#1">【风云人物】硬脖子县令──董宣</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/6/1/24/n1187865.md#1">【风云人物】悲天悯人的郑板桥</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/6/1/26/n1187879.md#1">【风云人物】高远山水画大师---范宽</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/6/1/30/n1195001.md#1">【风云人物】丹心报国的文天祥</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/6/1/30/n1206466.md#1">【风云人物】诗佛---王维</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/6/2/24/n1236387.md#1">【风云人物】“胸有成竹”的文同</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/6/2/26/n1237649.md#1">【风云人物】以兵法闻名的大将－孙武</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/upuqsh2796/djy/blob/master/gb/6/3/19/n1258417.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/upuqsh2796/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/upuqsh2796/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/28/n10094168.md#1" target="_blank">如初：再回顾民国学人批苏俄</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/9/5/n4520825.md#1" target="_blank">石铭：从爆破专家被酷刑致死看江氏集团的惨无人道</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/16/n12815794.md#1">【未解之谜】缅甸奇僧亲历 揭密生死轮回</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/13/n12809133.md#1">东方的辛德勒—约翰?拉贝</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/14/n12810364.md#1">西方轮回研究漫笔：转世前的安排和约定</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/20/4/3/n11999735.md#1">华盛顿将军系列故事：打马少年 入画江山? ?</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/18/n12820656.md#1">【未解之谜】临死体验后发生的奇迹</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/22/n12828150.md#1">【微视频】杨洁篪粗暴 蓬佩奥的“动手不动口”</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/22/n12826726.md#1">【拍案惊奇】北京画外交红线 川普建社媒平台</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/22/n12828962.md#1">【横河直播】反亚裔仇恨集会 谁在打种族牌</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/21/n12825808.md#1">蓬佩奥谈杨洁篪发飙：我会这样击其痛点</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/20/n12824695.md#1">美议员促扩大制裁 阻中芯国际购DUV光刻机</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/21/n12826026.md#1">整治冥纸冥币  中共“新破四旧”运动遭轰</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/22/n12827069.md#1">从不抽烟 台前主播萧彤雯罹肺腺癌零期</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/21/n12826073.md#1">感佩台湾垃圾分类 杜汶泽：爱一地犹如爱一人</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/21/n12825025.md#1">《餐车》回到原点 黄秋生因KID一句话走心</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/20/n12823452.md#1">《查克史奈德之正义联盟》影评：DC的史诗巨作！</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/22/n12827709.md#1">罗时丰大港开唱：纵使过气，也不要丧气</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/20/n12824338.md#1">鲑鱼5大营养补脑、护心血管 3类人不宜多吃</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/18/n12818954.md#1">癌症病人能打新冠疫苗吗？医师：一类癌症要谨慎</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/20/n12824292.md#1">【重播】变种病毒感染比例大增 第四波疫情恐将至？</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/21/n12825217.md#1">西澳70头虎鲸围攻16米长蓝鲸 搏斗4小时</a></li>
+<li><a href="https://github.com/qblrme335/djy/blob/master/gb/21/3/22/n12827458.md#1">心情高低起伏 男子遗失百万美元彩券后寻回</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qblrme335/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qblrme335/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/6/3/19/n1258417.htm">【风云人物】中唐名将郭子仪(二)</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/qblrme335/djy/blob/master/gb/6/3/19/n1258417.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qblrme335/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qblrme335/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qblrme335/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qblrme335/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qblrme335/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
