--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -5,7 +5,6 @@
 <tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12903135.md#1" target="_blank">美CDC：完全接种疫苗中逾七千人染疫88死</a><br></h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12903135.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12881144-1-3CountiesBackto2ndPhaset-150x120.jpg" align ="left"></a>根据卫生官员的统计，在已经完全接种COVID-19（中共病毒）的美国人中，有记录的之后感染的病例，已超过7100例。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 8:40 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12903156.md#1" target="_blank">【横河观点】美国媒体人如何吃中共的嘴软</a><br></h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12903156.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12903162-30e50eff1cfa3c6380b1a3a8754089e3-150x120.jpg" align ="left"></a>美《国家脉动》揭美国媒体人如何吃中共的嘴短，美国限制外国政府宣传新规；气候峰会美国自废武功，给中共输送利益，美国和中共争领导毫无意义。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 8:38 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/18/n12888540.md#1" target="_blank">三女子讲述“4·25”上访前后不寻常经历</a><br></h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/18/n12888540.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12899195-L1060074-150x120.jpg" align ="left"></a>1999年4月25日，北京中南海万人法轮功学员和平上访事件（简称：“4·25”）震惊了世界。再回首，围绕着“4·25”事件前前后后的一段日子，当时人在天津、北京，以及澳洲悉尼的三位女子，以自己的亲身经历，讲述了发生在那段时间的历史事实。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 6:34 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12902907.md#1" target="_blank">陕西洛南造假曝光 大陆民众“被脱贫”一角</a><br></h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12902907.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-635601542-800x450-600x400-150x120.jpg" align ="left"></a>在中共当局大力鼓吹的“全面脱贫”运动中，陕西省洛南县也在2020年2月宣布脱贫。不过，日前大陆媒体曝光，当地贫困户仍然住在破旧不堪的土坯房里，村里的水利设施形同虚设，村民只能到邻省或者水洼里取水。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 4:11 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12902826.md#1" target="_blank">中共推“工龄归零” 重庆受害者叹活不下去</a><br></h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12902826.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12902837-page44-150x120.jpg" align ="left"></a>中共强行实施“工龄归零”，以此切断服过刑人员等群体的养老金，导致全国上千万人“老无所养、病无所医”。日前，重庆多名受害者讲述自己在此恶政下的艰难生存状况，哀叹“不想活了”、“活不下去了”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 3:02 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12902746.md#1" target="_blank">五角大楼UFO报告 吹哨人：政府接受了现实</a><br></h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/24/n12902746.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2014/11/141101210654985-150x120.jpg" align ="left"></a>一位来自五角大落的吹哨人说，随着越多越多UFO（不明飞行物）事件的出现，美国政府已经无法回避这一“现实”，6月份将有大量相关文件公诸于众。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 2:44 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/22/n12899026.md#1" target="_blank">新唐人英文频道迅速崛起 英美24小时播出</a><br></h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/22/n12899026.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12902714-Screen-Shot-2021-04-21-at-10.02.53-PM-150x120.jpg" align ="left"></a>自去年7月，新唐人英文频道通过Verizon / Frontier FiOS 158在美首次播出以来，在不到一年的时间内，NTD已成为全国性的空中电视无线电视网，到5月1日，无线数字频道将增至7七十多个，播出遍及美国三十多个州，并同时通过有线电视向纽约、华盛顿特区、费城、波士顿、洛杉矶和芝加哥等大城市播出。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 2:21 AM							</td></tr>
@@ -30,5 +29,6 @@
 <tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12899797.md#1" target="_blank">涉千人计划 华裔化学家窃可口可乐机密罪成</a><br></h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12899797.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/08/GettyImages-2873707-150x120.jpg" align ="left"></a>美国司法部周四（4月22日）宣布，田纳西州格林维尔的联邦陪审团裁定，美籍华裔化学家游晓蓉（Dr. Xiaorong You，音译，又名Shannon You）罪证确凿，其串谋窃取商业秘密、经济间谍和电信欺诈等罪名成立。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月23日 2:50 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12899510.md#1" target="_blank">亲历者回忆：4·25上访是正义的丰碑</a><br></h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12899510.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12899630-804251223491667-150x120.jpg" align ="left"></a>22年过去，亲历者回忆往事，当年的情景仍历历在目。他们表示，4·25是历史的见证，法轮功学员展现和平、理性、道德和勇气，是人类正义的丰碑。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月23日 12:40 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12899492.md#1" target="_blank">孔子学院遭审查 澳外长：将废除更多涉外协议</a><br></h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12899492.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12899574-GettyImages-1313762206-150x120.jpg" align ="left"></a>维州与中共签署的一带一路协议被废后，澳洲外交部长佩恩（Marise Payne）警告说，未来可能会有更多违背国家利益的涉外协议被废除。目前，中共在澳洲大学里开设的至少两所孔子学院正在被审查。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月23日 12:24 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12899281.md#1" target="_blank">专访余茂春：各国不谋而合反共 原因在中共</a><br></h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/21/4/23/n12899281.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/ScreenShot-VideoID-s_zB_D9DBhE-TimeS-1168-150x120.png" align ="left"></a>拜登自上台以来，延续川普（特朗普）的对中共强硬政策，同时更注重联合欧洲和亚太的盟友，合围中共。四面楚歌的中共怒批美国搞“帮派政治”。川普政府高级官员余茂春反驳说，各国不谋而合反对中共，中共落入孤家寡人境地是自己造成的。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月23日 10:56 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/glmaow3740/djy/blob/master/gb/nf4514.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/nf4514_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/nf4514_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/nf4514_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/nf4514_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/nf4514_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/nf4514_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/nf4514_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/nf4514_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/nf4514_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/glmaow3740/djy/blob/master/gb/nf4514_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/glmaow3740/djy/blob/master/gb/nf4514.md#1<br><a href="https://github.com/glmaow3740/djy/blob/master/gb/nf4514.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/glmaow3740/djy/blob/master/gb/nf4514.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/nf4514.htm">https://www.epochtimes.com/gb/nf4514.htm</a>    （国内需<a href="https://github.com/glmaow3740/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
