--- a/gb/nf4514.md
+++ b/gb/nf4514.md
@@ -8,7 +8,7 @@
 <tr><td width="742"><h3><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/25/n12903917.md#1" target="_blank">台法轮功纪念425上访 再吁世人认清中共</a><br></h3><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/25/n12903917.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12904144-2104250939172384-150x120.jpg" align ="left"></a>逾万名中国法轮功学员于22年前的4月25日赴北京和平上访，争取合法炼功环境，被称为“六四”后规模最大的民众上访事件。为纪念“425和平上访”事件，台湾近千名法轮功学25日在台北市政府前举行记者会，呼吁各界持续关注、并能制止中共对法轮功进行的残酷暴行。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月26日 2:30 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/25/n12904282.md#1" target="_blank">德通过新IT安全法 为禁华为提供法律框架</a><br></h3><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/25/n12904282.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/09/GettyImages-1222280881-3-800x450-150x120.jpg" align ="left"></a>德国联邦议院上周五（4月23日）通过了新的IT法。此法被视为是更强硬的5G安全法，为德国政府禁止华为提供了法律框架。该法律还赋予内政部更大的权力，阻止那些会带来安全风险的5G合同。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月26日 2:25 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/25/n12903986.md#1" target="_blank">北京吹乒乓外交 基辛格捧场遭讽：该醒醒了</a><br></h3><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/25/n12903986.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/p7869901a230783149-150x120.jpg" align ="left"></a>中共高调宣传中美“乒乓外交”50周年，美国前国务卿基辛格再次发言，中共国务委员兼外长王毅的“平视”之说引发关注。分析人士直指，对于中共的宣传和所为，“基辛格该醒醒了”。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月26日 12:17 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/25/n12903944.md#1" target="_blank">印尼失联潜舰海底断成三截 53人全遇难</a><br></h3><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/25/n12903944.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12903954-GettyImages-1232518446-150x120.jpg" align ="left"></a>印度尼西亚军方周日（4月25日）表示，自周三（4月21日）失联的海军潜舰KRI Nanggala-402已找到，残骸在海底被发现，舰上53人全部丧生。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 10:02 PM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/25/n12903944.md#1" target="_blank">印尼失联潜舰海底断成三截 53人全遇难</a><br></h3><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/25/n12903944.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12903954-GettyImages-1232518446-150x120.jpg" align ="left"></a>印度尼西亚军方周日（4月25日）表示，自周三（4月21日）失联的海军潜舰KRI Nanggala-402已被找到，残骸在海底被发现，舰上53人全部丧生。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 10:02 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/25/n12903613.md#1" target="_blank">【疫情4.25】美英欧盟宣布向印度伸援手</a><br></h3><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/25/n12903613.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/04/id12868250-GettyImages-1287465337-1-600x400-150x120.jpg" align ="left"></a>据约翰?霍普金斯大学的统计数据，截至美东夏令时周日（4月25日）上午4:00，全球的中共病毒（武汉肺炎、COVID-19）病例总数超过1.46亿（146,481,456）例，死亡人数超过309万（3,099,907）人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 8:40 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/17/n12886940.md#1" target="_blank">历史回顾：四二五事件前 中共构陷法轮功</a><br></h3><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/17/n12886940.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/03/b54153411fe13d75457f0837eb4bb0a0-150x120.jpg" align ="left"></a>1999年4月25日，上万法轮功学员在北京的和平请愿，被中共的宣传机器抹黑为“围攻中南海”，成为中共前党魁江泽民镇压法轮功的一大借口。亲历四二五上访的三位前中共公安系统官员证实，中共政保系统此前多年就在构陷法轮功。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 8:24 PM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/24/n12902575.md#1" target="_blank">中共如何侵蚀美学者权利 专家用实例解析</a><br></h3><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/24/n12902575.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2016/05/GettyImages-479552484-150x120.jpg" align ="left"></a>美国在线杂志“The Federalist”近日刊登的一篇文章表示，中国共产党利用资金对美国的教育机构、教师和学生施加影响力。美中学术关系正在玷污美国公民在美国本土得到保障的基本权利和自由。不幸的是，这将是一种常态，直到美国机构敢于站出来澄清这种关系。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年04月25日 7:27 PM							</td></tr>
