--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -2,7 +2,7 @@
 <tr><td width="742"><h3><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/26/n12906066.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2013/10/1310160809262320-600x400.jpg" align ="left"></a><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/26/n12906066.md#1" target="_blank">大陆三大股指午后走弱 全线收跌近1%</a><br></h3>4月26日，大陆沪指、深成指、创业板三大股指午后全部跳水，截至收盘三大指数均下跌近1%。...<br><img align="bottom" src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/ntdtv/time.gif">04月26日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/26/n12906017.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/26/n12906017.md#1" target="_blank">湖南新宁丧礼现场电子礼花机爆炸 1死3伤</a><br></h3>4月26日上午，湖南省邵阳新宁县回龙寺镇一居民发生一起电子礼花机爆......<br><img align="bottom" src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/ntdtv/time.gif">04月26日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/26/n12905739.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/26/n12905739.md#1" target="_blank">男子闯上海地铁2号线路轨死亡 网民热议</a><br></h3>4月26日上午，上海地铁2号线龙阳路站的月台上，有一男子突然翻过安......<br><img align="bottom" src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/ntdtv/time.gif">04月26日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/24/n12902429.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/04/id12905700-GettyImages-1314175873-320x200.jpg" align ="left"></a><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/24/n12902429.md#1" target="_blank">【疫情4.26】印度单日35万确诊 更多国断航</a><br></h3>据约翰?霍普金斯大学的统计数据，截至美东夏令时周一（4月26日）早......<br><img align="bottom" src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/ntdtv/time.gif">04月26日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/24/n12902429.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/04/id12905700-GettyImages-1314175873-320x200.jpg" align ="left"></a><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/24/n12902429.md#1" target="_blank">【疫情4.26】印度单日确诊破35万 更多国断航</a><br></h3>据约翰?霍普金斯大学的统计数据，截至美东夏令时周一（4月26日）早......<br><img align="bottom" src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/ntdtv/time.gif">04月26日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/26/n12905760.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/04/id12905944-cd30a8213fd5a1c44d6feaef33c89dce-320x200.jpg" align ="left"></a><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/26/n12905760.md#1" target="_blank">胡平：中共搞“文革复辟” 难以迫使国人效忠</a><br></h3>近来大陆一些中小学校园内出现“忠字舞”，犹如当年文革再现，引起外界......<br><img align="bottom" src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/ntdtv/time.gif">04月26日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/26/n12905737.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/26/n12905737.md#1" target="_blank">孙大午被审查起诉 网民：欲加之罪何患无辞</a><br></h3>4月26日，中共河北高碑店市公安局发公告称，河北大午农牧集团有限公......<br><img align="bottom" src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/ntdtv/time.gif">04月26日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/26/n12905604.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/10/e0f6960caf0a9a223e952a1a0e3d5b22-320x200.jpg" align ="left"></a><a href="https://github.com/qmsvrr394/djy/blob/master/gb/21/4/26/n12905604.md#1" target="_blank">王岐山大管家董宏被逮捕</a><br></h3>4月26日，中共中央巡视组前副组长董宏被逮捕，相关案件被移送起诉......<br><img align="bottom" src="https://raw.githubusercontent.com/qmsvrr394/www/master/t/ntdtv/time.gif">04月26日</td></tr>
